实现卸载模型, 加载模型

--- a/style/css/mdui.css
+++ b/style/css/mdui.css
@@ -11960,7 +11960,7 @@ body.mdui-loaded .mdui-drawer {
           box-sizing: border-box;
   width: 92%;
   min-width: 180px;
-  max-width: 728px;
+  max-width: 920px;
   max-height: 90%;
   margin: auto;
   overflow: hidden;
@@ -11983,13 +11983,13 @@ body.mdui-loaded .mdui-drawer {
 @media (min-width: 600px) {
   .mdui-dialog {
     width: 85%;
-    max-height: 85%;
+    min-height: 92%;
   }
 }
 @media (min-width: 1024px) {
   .mdui-dialog {
     width: 80%;
-    max-height: 80%;
+    min-height: 80%;
   }
 }
 /* 打开提示框 */
